--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1>Aplikasi PWA Pertamaku</h1>
         <p>Selamat datang di Progressive Web App!</p>
-        <a href="/about.html">About</a>
+        <a href="about.html">About</a>
         <button id="installBtn" style="display: none;">Install Aplikasi</button>
     </div>
 
